01-container-platform/k8s/cillium/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: app-a # This policy applies to pods in the 'app-a' namespace
spec:
  podSelector: {} # An empty podSelector means this policy applies to ALL pods in the namespace
  policyTypes:
  - Ingress
  - Egress  # Deny all outgoing traffic
